# IDA-MCP

./: .gitignore  AGENTS.md  API.md  README.md  README_CN.md  chinese_filtered.txt  chinese_matches.txt  ida-plugin.json  project.md  pytest.ini  roadmap.md
ide/: pyproject.toml  requirements.txt  roadmap.md
ide/app/: i18n.py  main.py
ide/app/chat/: agent_factory.py  chat_service.py  mcp_pool.py  models.py  persistence.py  skill_resolver.py  streaming.py
ide/app/presenters/: settings_presenter.py
ide/app/services/: supervisor_client.py
ide/app/ui/: icons.py  main_window.py  theme.py
ide/app/ui/chat/: __init__.py  composer.py  message_list.py  page.py  provider_selector.py  session_sidebar.py  skill_selector.py  tool_trace_panel.py
ide/app/ui/settings/: dialogs.py  page.py  workers.py
ide/app/ui/workspace/: code_view.py
ide/build_helpers/: build_nuitka.py
ide/resources/i18n/: en.json  zh.json
ide/resources/ida_mcp/: API.md
ide/resources/ida_mcp/ida_mcp/: api_analysis.py  api_core.py  api_lifecycle.py  api_memory.py  api_modify.py  api_python.py  api_stack.py  api_types.py  command.py  config.conf  config.py  plugin_runtime.py  project.md  registry.py  registry_routes.py  registry_server.py  roadmap.md  type_utils.py  utils.py
ide/resources/ida_mcp/test/: conftest.py  (+10 more)
ide/shared/: database.py  ida_mcp_config.py  models.py
ide/supervisor/: gateway_controller.py  manager.py  models.py
ide/tests/: test_build_nuitka.py  test_chat_message_history.py  test_ida_mcp_config.py  test_mcp_pool.py  test_settings_config_path.py  test_settings_page_i18n.py
(+46 files in other folders)
