[project]
name = "ida-mcp-ide"
version = "0.1.0"
description = "PySide6 desktop IDE for IDA-MCP installation, status management, and multi-agent audit workflows"
readme = "README.md"
license = "MIT"
authors = [
    { name = "IDA-MCP Contributors" }
]
requires-python = ">=3.12,<3.13"

dependencies = [
    "PySide6==6.11.0",
    "deepagents==0.5.3",
    "langgraph==1.1.6",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic==2.13.1",
    "pygments==2.20.0",
    "markdown==3.10.2",
]

[project.scripts]
ida-mcp-ide = "app.main:main"
ida-mcp-ide-supervisor = "supervisor.main:main"

[tool.poetry]
packages = [
    { include = "app" },
    { include = "supervisor" },
    { include = "shared" },
    { include = "bootstrap" },
]

[tool.poetry.group.dev.dependencies]
nuitka = "4.0.8"
pytest = "9.0.3"
pur = "7.3.3"
zstandard = "0.25.0"
imageio = "2.37.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "environment: tests that depend on the host Python environment",
]
